--- a/package.json
+++ b/package.json
@@ -4,12 +4,23 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
+    "start": "vite",
+    "predeploy": "npm run build",
+    "deploy": "netlify deploy --prod --dir=dist",
     "dev": "vite",
     "build": "tsc && vite build",
     "preview": "vite preview"
   },
   "devDependencies": {
-    "typescript": "^4.6.4",
-    "vite": "^3.0.7"
+    "typescript": "^4.7.4",
+    "vite": "^3.0.8",
+    "vite-plugin-checker": "^0.4.9"
+  },
+  "prettier": {
+    "trailingComma": "es5",
+    "tabWidth": 2,
+    "semi": false,
+    "singleQuote": true,
+    "useTabs": false
   }
 }
